refactor: 変数の宣言を最適化